--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ background-color:transparent;
     display: flex;
     align-items: center;
 }
-.counter-button-plus .counter-button-minus{
+.counter-button-plus .counter-button-minus .counter-button-plus395 .counter-button-minus395{
 background: #FFFFFF;
 border: 1px solid #40A9FF;
 box-sizing: border-box;
